[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/player/images/waiting.png" type="Texture" id=1]
[ext_resource path="res://src/player/Player.gd" type="Script" id=2]
[ext_resource path="res://src/player/images/running_2.png" type="Texture" id=3]
[ext_resource path="res://src/player/images/running_1.png" type="Texture" id=4]
[ext_resource path="res://src/player/images/light.png" type="Texture" id=5]
[ext_resource path="res://src/player/images/interacting_2.png" type="Texture" id=6]
[ext_resource path="res://src/player/images/interacting_1.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "running",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "waiting",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "interacting",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 14.868

[sub_resource type="CircleShape2D" id=3]
radius = 43.9998

[node name="player" type="KinematicBody2D"]
collision_mask = 31
script = ExtResource( 2 )

[node name="sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "waiting"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.08072, 18.3722 )
shape = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 5 )
shadow_enabled = true

[node name="interact_range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="interact_range"]
position = Vector2( -1.08072, 16.7512 )
shape = SubResource( 3 )

[node name="interact_timer" type="Timer" parent="."]
[connection signal="body_entered" from="interact_range" to="." method="_on_interact_range_body_entered"]
[connection signal="body_exited" from="interact_range" to="." method="_on_interact_range_body_exited"]
[connection signal="timeout" from="interact_timer" to="." method="_on_interact_timer_timeout"]
